k8s/database.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: db
  template:
    metadata:
      labels:
        app: db
    spec:
      containers:
      - name: db
        image: postgis/postgis
        ports:
        - containerPort: 5432
        volumeMounts:
          - name: db-storage
            mountPath: /var/lib/postgresql
        resources: 
          requests:
            memory:  "1Gi"
            cpu: "128m"
          limits:
            memory: "1.5Gi"
            cpu: "192m"
      volumes:
        - name: db-storage
          persistentVolumeClaim:
            claimName: db-storage
      

---
apiVersion: v1
kind: Service
metadata:
  name: db
spec:
  type: NodePort
  ports:
  - port: 5432
    targetPort: 5432
  selector:
    app: db
