k8s/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: enprava/safeeatingfrontend:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
        resources: 
          requests:
            memory:  "0.5Gi"
            cpu: "64m"
          limits:
            memory: "1Gi"
            cpu: "192m"
        readinessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 10
          timeoutSeconds: 5

---
apiVersion: v1
kind: Service
metadata:
  name: frontend
spec:
  type: NodePort
  ports:
  - port: 3000
    targetPort: 3000
  selector:
    app: frontend
